woori new project start

--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@
                                     <fieldset>
                                         <legend class="ir_so">로그인 및 관련 설정</legend>
                                         <div class="login_header">
-                                            <h5 class="ir_so"></h5>
+                                            <h5 class="ir_so">로그인 보안</h5>
                                             <div class="lh_check">
                                                 <input type="checkbox" id="infor_check" class="input_check">
                                                 <label for="infor_check">로그인 상태유지</label>
                                             </div>
-                                            <div class="li_ip">
+                                            <div class="lh_ip">
                                                 IP보안 <em>ON</em>
                                             </div>
                                         </div>
@@ -349,8 +349,8 @@
                                         <div class="login_footer">
                                             <h5 class="ir_so">로그인 문제해결</h5>
                                             <ul>
-                                                <li><a href="#"><strong>회원가입</strong></a>/</li>
-                                                <li><a href="#">아이디</a>&middot;<a href="#">비밀번호찾기</a></li>
+                                                <li><a href="#"><strong>회원가입</strong></a> /</li>
+                                                <li><a href="#">아이디</a> &middot; <a href="#">비밀번호찾기</a></li>
                                             </ul>
                                         </div>
                                     </fieldset>
@@ -460,7 +460,7 @@
                             <div class="tab_menu">
                                 <h4 class="ir_so">탭메뉴</h4>
                                 <ul>
-                                    <li>
+                                    <li class="on">
                                         <a href="#">공지사항1</a>
                                         <ul>
                                             <li><a href="#">첫번째 공지사항 탭메뉴 테스트 목록입니다. 첫번째 공지사항 탭메뉴 테스트 목록입니다.</a></li>
