project2_woori html 수정, css 수정

--- a/project2_woori/index.html
+++ b/project2_woori/index.html
@@ -159,74 +159,85 @@
                     </ul>
                 </div>
                 <div id="mid_cont_menu">
-                    <div class="cont_menu_left">
-                        <div class="ico_left">
-                            <img src="images/img1.png" alt="예금">
-                            <p><em>예금</em></p>
+                    <div id="cont_menu">
+                        <div class="cont_menu_left">
+                            <a href="#">금융상품</a>
+                            <div class="ico_left left_font1">
+                                <img src="images/img1.png" alt="예금">
+                                <p><em>예금</em></p>
+                            </div>
+                            <div class="ico_left left_font2">
+                                <img src="images/img2.png" alt="대출">
+                                <p><em>대출</em></p>
+                            </div>
+                            <div class="ico_left left_font3">
+                                <img src="images/img3.png" alt="펀드">
+                                <p><em>펀드</em></p>
+                            </div>
+                            <div class="ico_left left_font4">
+                                <img src="images/img4.png" alt="외환">
+                                <p><em>외환</em></p>
+                            </div>
+                            <div class="ico_left left_font5">
+                                <img src="images/img5.png" alt="신탁">
+                                <p><em>신탁</em></p>
+                            </div>
+                            <div class="ico_left left_font6">
+                                <img src="images/img6.png" alt="퇴직연금">
+                                <p><em>퇴직연금</em></p>
+                            </div>
+                            <div class="ico_left left_font7">
+                                <img src="images/img7.png" alt="보험">
+                                <p><em>보험</em></p>
+                            </div>
+                            <div class="ico_left left_font8">
+                                <img src="images/img8.png" alt="ISA">
+                                <p><em>ISA</em></p>
+                            </div>
                         </div>
-                        <div class="ico_left">
-                            <img src="images/img2.png" alt="대출">
-                            <p><em>대출</em></p>
-                        </div>
-                        <div class="ico_left">
-                            <img src="images/img3.png" alt="펀드">
-                            <p><em>펀드</em></p>
-                        </div>
-                        <div class="ico_left">
-                            <img src="images/img6.png" alt="외환">
-                            <p><em>외환</em></p>
-                        </div>
-                        <div class="ico_left">
-                            <img src="images/img4.png" alt="신탁">
-                            <p><em>신탁</em></p>
-                        </div>
-                        <div class="ico_left">
-                            <img src="images/img5.png" alt="퇴직연금">
-                            <p><em>퇴직연금</em></p>
-                        </div>
-                        <div class="ico_left">
-                            <img src="images/img7.png" alt="보험">
-                            <p><em>보험</em></p>
-                        </div>
-                        <div class="ico_left">
-                            <img src="images/img8.png" alt="ISA">
-                            <p><em>ISA</em></p>
-                        </div>
-                    </div>
-                    <div class="cont_menu_right">
-                        <div class="ico_right">
-                            <img src="images/img9.png" alt="카드신청">
-                            <p><em>카드신청</em></p>
-                        </div>
-                        <div class="ico_right">
-                            <img src="images/img10.png" alt="나의카드">
-                            <p><em>나의카드</em></p>
-                        </div>
-                        <div class="ico_right">
-                            <img src="images/img11.png" alt="이벤트">
-                            <p><em>이벤트</em></p>
+                        <div class="mid_box"></div>
+                        <div class="cont_menu_right">
+                            <a href="#">카드</a>
+                            <div class="ico_right right_font1">
+                                <img src="images/img9.png" alt="카드신청">
+                                <p><em>카드신청</em></p>
+                            </div>
+                            <div class="ico_right right_font2">
+                                <img src="images/img10.png" alt="나의카드">
+                                <p><em>나의카드</em></p>
+                            </div>
+                            <div class="ico_right right_font3">
+                                <img src="images/img11.png" alt="이벤트">
+                                <p><em>이벤트</em></p>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div id="service">
-                    <h2>서비스</h2>
-                    <div class="service_box">
-                        <div class="service_box_one">
-                            <div class="service_img"></div>
+
+                    <div class="service_wrap">
+                        <h2>서비스</h2>
+                        <div class="service_box">
+                            <div class="service_img">
+                                <a href="#"><img src="images/service1.png" alt="service1"></a>
+                            </div>
                             <span>우리WON뱅킹</span>
                             <p>
                                 새 시대의 금융을 켜다. <br> 우리은행 대표 모바일 뱅킹 APP
                             </p>
                         </div>
-                        <div class="service_box_two">
-                            <div class="service_img"></div>
+                        <div class="service_box">
+                            <div class="service_img">
+                                <a href="#"><img src="images/service2.png" alt="service2"></a>
+                            </div>
                             <span>머니플랜</span>
                             <p>
                                 은행, 증권, 카드, 보험 <br> 내 모든 금융정보를 한 눈에
                             </p>
                         </div>
-                        <div class="service_box_three">
-                            <div class="service_img"></div>
+                        <div class="service_box">
+                            <div class="service_img service_img3"></div>
+                            <a href="#"><img src="images/service3.png" alt="service3"></a>
                             <span>스마트간편신규</span>
                             <p>
                                 직원에게 추천받으신 상품을 <br> 간편하게 가입하세요
@@ -234,18 +245,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="clear"></div>
                 <div id="information">
                     <div class="information_cont">
                         <div class="news">
                             <div class="news_left">
                                 <h2>새소식</h2>
-                                <a href="#">더보기</a>
+                                <a href="#">더보기 <img src="images/newsevent.png" alt="더보기"></a>
                             </div>
                             <div class="news_center">
                                 <ul>
                                     <li><a href="#">[공지] 우리WON뱅킹 실행이 안되는 현상에 대한 조치방법 안내</a></li>
                                     <li><a href="#">[공지] 2021년 디노랩 2기 모집 안내</a></li>
-                                    <li><a href="#">[공지] 2021년 상반기 우리은행 일반직 신입행원 특별 수시채용 안내</a></li>
+                                    <li><a href="#">[채용] 2021년 상반기 우리은행 일반직 신입행원 특별 수시채용 안내</a></li>
                                 </ul>
                             </div>
                             <div class="news_right">
@@ -260,7 +272,7 @@
                         <div class="event">
                             <div class="event_left">
                                 <h2>이벤트</h2>
-                                <a href="#">더보기</a>
+                                <a href="#">더보기 <img src="images/newsevent.png" alt="더보기"></a>
                             </div>
                             <div class="event_center">
                                 <ul>
@@ -278,40 +290,99 @@
             <div id="footer">
                 <div class="footer_top">
                     <ul class="footer_top_left">
-                        <li><a href="#">대표 1588-5000</a></li>
-                        <li><a href="#">기타서비스</a></li>
-                        <li><a href="#">LANGUAGE</a></li>
-                        <li><a href="#">패밀리사이트</a></li>
+                        <li><a href="#">대표 1588-5000</a><img src="images/footersel.png" alt="대표 1588-5000 바로가기"></li>
+                        <li>
+                            <div class="block1"></div>
+                        </li>
+                        <li><a href="#">기타서비스</a><img src="images/footersel.png" alt="기타서비스 바로가기"></li>
+                        <li>
+                            <div class="block1"></div>
+                        </li>
+                        <li><a href="#">LANGUAGE</a><img src="images/footersel.png" alt="LANGUAGE 바로가기"></li>
+                        <li>
+                            <div class="block1"></div>
+                        </li>
+                        <li><a href="#">패밀리사이트</a><img src="images/footersel.png" alt="패밀리사이트 바로가기"></li>
                     </ul>
                     <ul class="footer_top_right">
-                        <li><a href="#">facebook</a></li>
-                        <li><a href="#">instargram</a></li>
-                        <li><a href="#">우리은행 네이버 포스트</a></li>
-                        <li><a href="#">youtube</a></li>
-                        <li><a href="#">네이버TV</a></li>
-                        <li><a href="#">twitter</a></li>
+                        <li>
+                            <a href="#"><img src="images/footer1.png" alt="facebook"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="images/footer2.png" alt="instargram"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="images/footer3.png" alt="우리은행 네이버 포스트"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="images/footer4.png" alt="youtube"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="images/footer5.png" alt="네이버TV"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="images/footer6.png" alt="twitter"></a>
+                        </li>
                     </ul>
                 </div>
+                <div class="clear"></div>
                 <div class="footer_bottom">
                     <img src="images/footerlogo.gif" alt="로고이미지">
                     <ul class="footer_bottom_left">
                         <li><a href="#">은행소개</a></li>
+                        <li>
+                            <div class="block2"></div>
+                        </li>
                         <li><a href="#">영업안내</a></li>
+                        <li>
+                            <div class="block2"></div>
+                        </li>
                         <li><a href="#">고객광장</a></li>
+                        <li>
+                            <div class="block2"></div>
+                        </li>
                         <li><a href="#">개인정보처리방침</a></li>
+                        <li>
+                            <div class="block2"></div>
+                        </li>
                         <li><a href="#">신용정보활용체제</a></li>
+                        <li>
+                            <div class="block2"></div>
+                        </li>
                         <li><a href="#">개인신용정보관리보호</a></li>
                         <li><a href="#">사고신고</a></li>
+                        <li>
+                            <div class="block2"></div>
+                        </li>
                         <li><a href="#">전자민원접수</a></li>
+                        <li>
+                            <div class="block2"></div>
+                        </li>
                         <li><a href="#">보호금융상품등록부</a></li>
+                        <li>
+                            <div class="block2"></div>
+                        </li>
                         <li><a href="#">상품공시실</a></li>
+                        <li>
+                            <div class="block2"></div>
+                        </li>
                         <li><a href="#">보안센터</a></li>
+                        <li>
+                            <div class="block2"></div>
+                        </li>
                         <li><a href="#">웹접근성 이용안내</a></li>
+                        <li>COPYRIGHTS WOORI BANK. ALL RIGHTS RESERVED.</li>
                     </ul>
                     <ul class="footer_bottom_right">
-                        <li><a href="#">국가공인 웹 접근성 품질인증마크</a></li>
-                        <li><a href="#">2019 고객감동경영대상 종합대상 12년 연속 수상</a></li>
-                        <li><a href="#">2020 우리은행 3관왕 수상</a></li>
+                        <li>
+                            <img src="images/footerbottom1.gif" alt="국가공인 웹 접근성 품질인증마크">
+                        </li>
+                        <li>
+                            <img src="images/footerbottom2.gif" alt="2019 고객감동경영대상 종합대상 12년 연속 수상">
+                        </li>
+                        <li>
+                            <img src="images/footerbottom3.png" alt="2020 우리은행 3관왕 수상">
+                        </li>
                     </ul>
                 </div>
             </div>
