--- a/index.html
+++ b/index.html
@@ -17,14 +17,23 @@
     <title>웹표준을 준수한 사이트</title>
     <!-- style -->
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="css/wireframe.css"> -->
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/lightgallery.css">
     <!-- wedfont -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
-
+    <!-- script -->
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    <script>
+        jQuery(document).ready(function() {
+            $('.tit .btn').click(function() {
+                $('#cont_nav').slideToggle();
+                $('.tit .btn').toggleClass('on');
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -35,7 +44,7 @@
         <a href="#cont_cont" rel="bookmark">컨텐츠 영역 바로가기</a>
     </div>
     <div id="wrap">
-        <div id="header" role="header">
+        <div id="header" role="heading">
             <div class="container">
                 <div class="header">
                     <div class="header-menu">
@@ -192,7 +201,45 @@
             </div>
             <div id="cont_ban">
                 <div class="container">
-                    <div class="ban">
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"></a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#"><img src="img/banner_link2.jpg" alt="CSS 버튼 만들기"></a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#"><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"></a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"></a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#"><img src="img/banner_link2.jpg" alt="CSS 버튼 만들기"></a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#"><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"></a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"></a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#"><img src="img/banner_link2.jpg" alt="CSS 버튼 만들기"></a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#"><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"></a>
+                            </div>
+
+                        </div>
+                        <!-- Add Pagination -->
+                        <div class="swiper-pagination"></div>
+                        <!-- Add Arrows -->
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                    </div>
+                    <!-- //class="swiper-container" -->
+                    <!-- <div class="ban">
                         <div class="ban_container">
                             <div>
                                 <a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"></a>
@@ -222,7 +269,7 @@
                                 <a href="#"><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"></a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <!-- //id="cont_ban" -->
@@ -290,8 +337,6 @@
                             </div>
                             <!-- .notice2>h4(>ul(li>a)*5)+a -->
                             <div class="notice">
-
-                                <h4></h4>
                                 <ul>
                                     <li>
                                         <a href=""></a>
@@ -548,29 +593,56 @@
             <!-- //id="cont_cont" -->
         </div>
         <!-- //#contant -->
-        <div id="footer" role="footer">
+        <div id="footer" role="contentinfo">
             <div class="container">
-                <h2 class="ir_so">푸터영역</h2>
-                <div class="footer">
-                    <div class="footer">
+                <h2 class="ir_so ">푸터영역</h2>
+                <div class="footer ">
+                    <div class="footer ">
                         <ul>
-                            <li><a href="#">사이트 도움말</a></li>
-                            <li><a href="#">사이트 이용약관</a></li>
-                            <li><a href="#">사이트 운영규칙</a></li>
-                            <li><a href="#"><strong>개인정보취급방침</strong></a></li>
-                            <li><a href="#">책임의 한계와 법적고지</a></li>
-                            <li><a href="#">게시중단요청 서비스</a></li>
-                            <li><a href="#">고객센터</a></li>
+                            <li><a href="# ">사이트 도움말</a></li>
+                            <li><a href="# ">사이트 이용약관</a></li>
+                            <li><a href="# ">사이트 운영규칙</a></li>
+                            <li><a href="# "><strong>개인정보취급방침</strong></a></li>
+                            <li><a href="# ">책임의 한계와 법적고지</a></li>
+                            <li><a href="# ">게시중단요청 서비스</a></li>
+                            <li><a href="# ">고객센터</a></li>
                         </ul>
                         <address>Copyright&copy;greenraining_.dothome.co.kr All Right Reserved</address>
-                        <div class="w3c"></div>
+                        <div class="w3c ">
+                            <a href="http://validator.kldp.org/check?uri=referer" onclick="this.href=this.href.replace(/referer$/,encodeURIComponent(document.URL))"><img src="//validator.kldp.org/w3cimgs/validate/html5-blue.png" alt="Valid HTML 5" height="15" width="80"></a>
+                            </p>
+                            <p>
+                                <a href="http://css-validator.kldp.org/check/referer">
+                                    <img style="border:0;width:80px;height:15px" src="//css-validator.kldp.org/images/validate/css-blue" alt="올바른 CSS입니다!" />
+                                </a>
+                            </p>
+
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <!-- //#footer -->
     </div>
-
+    <script>
+        var swiper = new Swiper('.swiper-container', {
+            slidesPerView: 3, //한화면에 보여줄 이미지 갯수
+            spaceBetween: 30, //슬라이드 사이 여백
+            centeredSlides: true, //슬라이드 가로 중앙 배치
+            autoplay: { //자동재생
+                delay: 2500, //정지시간(ms)
+                disableOnInteraction: false, //false 로 설정하면 스와이프 후 자동재생이 비활성화 안됨
+            },
+            pagination: { //페이지네이션
+                el: '.swiper-pagination', //html 요소명
+                clickable: true, //클릭
+            },
+            navigation: { //네비게이션
+                nextEl: '.swiper-button-next', //next 버튼이될 요소명
+                prevEl: '.swiper-button-prev', //prev 버튼이될 요소명
+            },
+        });
+    </script>
 
 
 </body>
