project woori menu hover +

--- a/project2_woori/index.html
+++ b/project2_woori/index.html
@@ -36,25 +36,28 @@
                     <div id="login_button">
                         <div class="login">
                             <span>로그인</span>
-                            <span class="login_hover">
-                            <a href="#">개인</a>
-                            <a href="#">기업</a>
-                        </span>
+                            <div class="login_hover">
+                                <a href="#">개인</a>
+                                <a href="#">기업</a>
+                                <div class="block3"></div>
+                            </div>
                         </div>
                         <div class="center">
                             <span>인증센터</span>
-                            <span class="login_hover">
-                            <a href="#">개인</a>
-                            <a href="#">기업</a>
-                        </span>
+                            <div class="login_hover">
+                                <a href="#">개인</a>
+                                <a href="#">기업</a>
+                                <div class="block3"></div>
+                            </div>
                         </div>
                     </div>
                     <div id="menu">
                         <ul>
-                            <li>
-                                <a href="#">개인</a>
+                            <li class="menu_fl">
+                                <h2><a href="#">개인</a></h2>
+                                <div class="clear"></div>
                                 <ul class="menu_list">
-                                    <li><a href="#">개인뱅킹</a></li>
+                                    <li class="m_1"><a href="#">개인뱅킹</a></li>
                                     <li><a href="#">조회</a></li>
                                     <li><a href="#">이체</a></li>
                                     <li><a href="#">오픈뱅킹</a></li>
@@ -70,10 +73,11 @@
 
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">기업</a>
+                            <li class="menu_fl">
+                                <h2><a href="#">기업</a></h2>
+                                <div class="clear"></div>
                                 <ul class="menu_list">
-                                    <li><a href="#">개인뱅킹</a></li>
+                                    <li class="m_1"><a href="#">개인뱅킹</a></li>
                                     <li><a href="#">조회</a></li>
                                     <li><a href="#">이체</a></li>
                                     <li><a href="#">공과금</a></li>
@@ -88,20 +92,22 @@
                                     <li><a href="#">뱅킹관리</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">자산관리</a>
+                            <li class="menu_fl">
+                                <h2><a href="#">자산관리</a></h2>
+                                <div class="clear"></div>
                                 <ul class="menu_list">
-                                    <li><a href="#">자산관리</a></li>
+                                    <li class="m_1"><a href="#">자산관리</a></li>
                                     <li><a href="#">로보/전문가설계</a></li>
                                     <li><a href="#">펀드마켓</a></li>
                                     <li><a href="#">은퇴설계</a></li>
                                     <li><a href="#">재무설계</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">금융상품</a>
+                            <li class="menu_fl">
+                                <h2><a href="#">금융상품</a></h2>
+                                <div class="clear"></div>
                                 <ul class="menu_list">
-                                    <li><a href="#">금융상품</a></li>
+                                    <li class="m_1"><a href="#">금융상품</a></li>
                                     <li><a href="#">추천상품</a></li>
                                     <li><a href="#">예금</a></li>
                                     <li><a href="#">펀드</a></li>
@@ -115,8 +121,8 @@
                                     <li><a href="#">ISA</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">카드</a>
+                            <li class="menu_fl">
+                                <h2><a href="#">카드</a></h2>
                             </li>
                         </ul>
                     </div>
