menu border, cont_menu hover 수정

--- a/project2_woori/index.html
+++ b/project2_woori/index.html
@@ -14,7 +14,7 @@
     <meta property="og:site_name" content="FREYAISGOOD" />
     <meta property="og:description" content="FREYAISGOOD" />
 
-    <title>웹표준을 준수한 사이트</title>
+    <title>우리은행</title>
     <!-- style -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style1.css">
@@ -56,6 +56,7 @@
                             <li class="menu_fl">
                                 <h2><a href="#">개인</a></h2>
                                 <div class="clear"></div>
+                                <div class="arrow"></div>
                                 <ul class="menu_list">
                                     <li class="m_1"><a href="#">개인뱅킹</a></li>
                                     <li><a href="#">조회</a></li>
@@ -75,6 +76,7 @@
                             </li>
                             <li class="menu_fl">
                                 <h2><a href="#">기업</a></h2>
+                                <div class="arrow"></div>
                                 <div class="clear"></div>
                                 <ul class="menu_list">
                                     <li class="m_1"><a href="#">개인뱅킹</a></li>
@@ -94,6 +96,7 @@
                             </li>
                             <li class="menu_fl">
                                 <h2><a href="#">자산관리</a></h2>
+                                <div class="arrow"></div>
                                 <div class="clear"></div>
                                 <ul class="menu_list">
                                     <li class="m_1"><a href="#">자산관리</a></li>
@@ -105,6 +108,7 @@
                             </li>
                             <li class="menu_fl">
                                 <h2><a href="#">금융상품</a></h2>
+                                <div class="arrow"></div>
                                 <div class="clear"></div>
                                 <ul class="menu_list">
                                     <li class="m_1"><a href="#">금융상품</a></li>
@@ -148,7 +152,7 @@
         <section>
             <div id="content">
                 <div class="quick_menu">
-                    <div class="quick_first quickbox"><a href="#">다른은행 <br> 계좌조회</a></div>
+                    <div class="quick_first quickbox"><a href="#">다른은행 계좌조회</a></div>
                     <div class="quick_mid quickbox"><a href="#">조회</a></div>
                     <div class="quick_mid quickbox"><a href="#">이체</a></div>
                     <div class="quick_mid quickbox"><a href="#">환율</a></div>
