footer_top_left 1,2

--- a/project2_woori/index.html
+++ b/project2_woori/index.html
@@ -151,14 +151,16 @@
         </header>
         <section>
             <div id="content">
-                <div class="quick_menu">
-                    <div class="quick_first quickbox"><a href="#">다른은행 계좌조회</a></div>
-                    <div class="quick_mid quickbox"><a href="#">조회</a></div>
-                    <div class="quick_mid quickbox"><a href="#">이체</a></div>
-                    <div class="quick_mid quickbox"><a href="#">환율</a></div>
-                    <div class="quick_last quickbox">
-                        <a href="#">빠른메뉴</a>
-                        <a href="#">빠른메뉴바로가기</a>
+                <div id="quick">
+                    <div class="quick_menu">
+                        <div class="quick_first quickbox"><a href="#">다른은행 계좌조회</a></div>
+                        <div class="quick_mid quickbox"><a href="#">조회</a></div>
+                        <div class="quick_mid quickbox"><a href="#">이체</a></div>
+                        <div class="quick_mid quickbox"><a href="#">환율</a></div>
+                        <div class="quick_last quickbox">
+                            <a href="#">빠른메뉴</a>
+                            <a href="#">빠른메뉴바로가기</a>
+                        </div>
                     </div>
                 </div>
                 <div class="quick_sub">
@@ -300,19 +302,104 @@
             <div id="footer">
                 <div class="footer_top">
                     <ul class="footer_top_left">
-                        <li><a href="#">대표 1588-5000</a><img src="images/footersel.png" alt="대표 1588-5000 바로가기"></li>
+                        <li class="footer_top_left1"><a href="#">대표 <strong>1588-5000</strong></a><img src="images/footersel.png" alt="대표 1588-5000 바로가기">
+                            <ul>
+                                <li>
+                                    <h2>ARS 이용안내</h2>
+                                </li>
+                                <li class="line"></li>
+                                <li class="clear"></li>
+                                <li>
+                                    <span>대표전화</span>
+                                    <p class="pl_1">1588-5000 / 1599-5000 <br> 82-2-2006-5000(해외)</p>
+                                </li>
+                                <li class="line line_1"></li>
+
+                                <li>
+                                    <span class="back_gy">고객의 말씀</span>
+                                    <p>080-365-5000 <br> (휴대폰 02-2008-5000)</p>
+                                </li>
+                                <li class="line line_1"></li>
+                                <li>
+                                    <span>신규상담</span>
+                                    <p class="pl_2">예적금 &nbsp;&nbsp; 1599-8100 <br> 대출 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1599-8300</p>
+                                    <p></p>
+                                </li>
+                            </ul>
+                        </li>
                         <li>
                             <div class="block1"></div>
                         </li>
-                        <li><a href="#">기타서비스</a><img src="images/footersel.png" alt="기타서비스 바로가기"></li>
+                        <li class="footer_top_left2"><a href="#">기타서비스</a><img src="images/footersel.png" alt="기타서비스 바로가기">
+                            <ul>
+                                <li>
+                                    <h2>기타서비스</h2>
+                                </li>
+                                <li class="line"></li>
+                                <li class="clear"></li>
+                                <li><a href="#"><span></span>법원환급금조회</a></li>
+                                <li><a href="#"><span></span>미교부국민주조회</a></li>
+                                <li><a href="#"><span></span>상조회사예치금조회</a></li>
+                                <li><a href="#"><span></span>예금잔액증명서발급조회</a></li>
+                                <li><a href="#"><span></span>지급보증서발급조회</a></li>
+                                <li>
+                                    <a href="#"><span></span>서울시예치금내역조회</a>
+                                    <p></p>
+                                </li>
+                            </ul>
+                        </li>
                         <li>
                             <div class="block1"></div>
                         </li>
-                        <li><a href="#">LANGUAGE</a><img src="images/footersel.png" alt="LANGUAGE 바로가기"></li>
+                        <li class="footer_top_left3"><a href="#">LANGUAGE</a><img src="images/footersel.png" alt="LANGUAGE 바로가기">
+                            <ul>
+                                <li>
+                                    <h2>LANGUAGE</h2>
+                                </li>
+                                <li class="line"></li>
+                                <li class="clear"></li>
+                                <li><img src="images/all_svc_flag_us.gif" alt="flag_us"><a href="#">English</a></li>
+                                <li><img src="images/all_svc_flag_china.gif" alt="flag_china"><a href="#">中國語</a></li>
+                                <li><img src="images/all_svc_flag_japan.gif" alt="flag_japan"><a href="#">日本語</a></li>
+                                <li><img src="images/all_svc_flag_philippines.gif" alt="flag_philippines"><a href="#">Tagalog</a></li>
+                                <li><img src="images/all_svc_flag_vietnam.gif" alt="flag_vietnam"><a href="#">tiếng Việt</a></li>
+                                <li>
+                                    <img src="images/all_svc_flag_mongolia.gif" alt="flag_mongolia"><a href="#">Монгол хэл</a>
+                                    <p></p>
+                                </li>
+                            </ul>
+
+                        </li>
                         <li>
                             <div class="block1"></div>
                         </li>
-                        <li><a href="#">패밀리사이트</a><img src="images/footersel.png" alt="패밀리사이트 바로가기"></li>
+                        <li class="footer_top_left4"><a href="#">패밀리사이트</a><img src="images/footersel.png" alt="패밀리사이트 바로가기">
+                            <ul>
+                                <li>
+                                    <h2>패밀리사이트</h2>
+                                </li>
+                                <li class="line"></li>
+                                <li class="clear"></li>
+                                <li><a href="#">우리금융지주</a></li>
+                                <li><a href="#">우리카드</a></li>
+                                <li><a href="#">우리금융캐피탈</a></li>
+                                <li><a href="#">우리종합금융</a></li>
+                                <li><a href="#">우리자산신탁</a></li>
+                                <li><a href="#">우리자산운용</a></li>
+                                <li><a href="#">우리금융저축은행</a></li>
+                                <li><a href="#">우리신용정보</a></li>
+                                <li><a href="#">우리펀드서비스</a></li>
+                                <li><a href="#">우리PE</a></li>
+                                <li><a href="#">우리글로벌자산운동</a></li>
+                                <li><a href="#">우리FIS</a></li>
+                                <li><a href="#">우리금융경영연구소</a></li>
+                                <li><a href="#">우리다문화장학재단</a></li>
+                                <li>
+                                    <a href="#">우리미소금융재단</a>
+                                    <p></p>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                     <ul class="footer_top_right">
                         <li>
