--- a/project2_woori/index.html
+++ b/project2_woori/index.html
@@ -154,7 +154,26 @@
                         </div>
                         <div id="all_menu">
                             <a href="#">전체메뉴</a>
-                            <a href="#">GLOBAL</a>
+                            <div class="all_menuCt">
+                                <a href="#">GLOBAL</a>
+                                <div class="arrow"></div>
+                                <ul class="language">
+                                    <li>
+                                        <h3>LANGUAGE</h3>
+                                    </li>
+                                    <li class="line"></li>
+                                    <li class="clear"></li>
+                                    <li><img src="images/all_svc_flag_us.gif" alt="flag_us"><a href="#">English</a></li>
+                                    <li><img src="images/all_svc_flag_china.gif" alt="flag_china"><a href="#">Chinese (中國語)</a></li>
+                                    <li><img src="images/all_svc_flag_japan.gif" alt="flag_japan"><a href="#">Japanese (日本語)</a></li>
+                                    <li><img src="images/all_svc_flag_philippines.gif" alt="flag_philippines"><a href="#">Filipino (Tagalog)</a></li>
+                                    <li><img src="images/all_svc_flag_vietnam.gif" alt="flag_vietnam"><a href="#">Vietnamese (tiếng Việt)</a></li>
+                                    <li>
+                                        <img src="images/all_svc_flag_mongolia.gif" alt="flag_mongolia"><a href="#">Mongolian (Монгол хэл)</a>
+                                        <p></p>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                         <div id="top_search">
                             <a href="#">찾기</a>
